--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --watch server/src --exec node --no-warnings=ExperimentalWarning --loader ts-node/esm server/src/index.ts"
   },
   "type": "module",
   "repository": {
@@ -19,11 +20,15 @@
   "homepage": "https://github.com/HebaDwairi/chat-app#readme",
   "description": "",
   "devDependencies": {
+    "@types/express": "^5.0.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "@prisma/client": "^6.5.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "prisma": "^6.5.0"
   }
 }
